# Zadacha5-4-semestr-

./: CMakeLists.txt  CObject.cpp  CObject.h  CPlane.cpp  CVect.cpp  CVect.h  Light.cpp  Light.h  README.md  Reader.cpp  auto.cpp  factory.h  func.cpp  input1.txt  input2.txt  main.cpp  wh.h
